deploy/kubernetes/gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airun-service
  namespace: default
  labels:
    app: airun
  annotations:
    cloud.google.com/backend-config: '{"default": "airun-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: airun
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
